some translation revisions

--- a/japan/advance/game.html
+++ b/japan/advance/game.html
@@ -69,7 +69,7 @@ body{
         </table>
         <table width="540" border="0" cellspacing="2" cellpadding="2" bgcolor="#006633">
           <tr> 
-            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF">Бе</font></b></font><font color="#FFFFFF" size="2">Single Cartridge Match</font></b></font></td>
+            <td><font size="2"><b><font size="2" color="#FF0000"><b><font color="#FFFFFF"></font></b></font><font color="#FFFFFF" size="2">Single Cartridge Match</font></b></font></td>
           </tr>
           <tr> 
             <td bgcolor="#00CC99"><font size="2">If you have only one cartridge, you can play against each other. In this mode, you collect rings.</font><font size="2"></font></td>
