--- a/japan/sonicadv/dload/cfvol1.html
+++ b/japan/sonicadv/dload/cfvol1.html
@@ -1,21 +1,21 @@
 <html>
 <head>
-<tmtle><title>ソニックアドベンチャーＣＦ！</title></head><body bgcolor="white" link="red" vlink="blue">
+<tmtle><title>Sonic Adventure CF!</title></head><body bgcolor="white" link="red" vlink="blue">
 <div align="center">sonicadvCF </div>
 <center>
 <table width="512" border=0>
 <tr><td bgcolor="red" align="center" colspan=2 height=60>
 <font size=4 face="ＤＦＰPOP体" color="white"><b>
-ソニックアドベンチャーＣＦ！<br>
-[SonicAdventure - MovieDownLoad]
+Sonic Adventure CF!<br>
+[Sonic Adventure - Movie Download]
 </b></font></td></tr>
 
 <tr>
 <td colspan=2>
 <hr>
-        <font size="2">お待たせ！</font><font size=3>
-        <p><font size="2"> 今関東地方を中心に流してる３０秒のテレビＣＦを、全国のみんなに見てもらえるように、ムービーにしました！<br>
-          今回は画面をやや大きめにしたから、ダウンロードに少し時間がかかりま～す。 </font>
+        <font size="2">Here you go!</font><font size=3>
+        <p><font size="2">We took the 30-second TV commercial that's currently running in the Kanto area and turned it intoa movie so that everyone in the country can see it!<br>
+          We made the screen a little bigger this time, so it will take a little longer to download.</font>
         <hr>
 </font></td></tr>
 
@@ -25,26 +25,26 @@
 
         <table width="320" border=1 cellpadding=0 bgcolor="#eeeeee">
           <tr> 
-            <td colspan=2 align="center"><font size="2">ソニック編</font></td>
+            <td colspan=2 align="center"><font size="2">Sonic Edition</font></td>
           </tr>
           <tr> 
-            <td><font size="2">画面サイズ</font></td>
-            <td><font size="2">２４０×１８０</font></td>
+            <td><font size="2">Resolution</font></td>
+            <td><font size="2">240x180</font></td>
           </tr>
           <tr> 
-            <td><font size="2">圧縮</font></td>
-            <td><font size="2">MPEG：フルカラー</font></td>
+            <td><font size="2">Compression</font></td>
+            <td><font size="2">MPEG: Full color</font></td>
           </tr>
           <tr> 
-            <td><font size="2">フレーム数</font></td>
-            <td><font size="2">３０フレーム/秒</font></td>
+            <td><font size="2">Framerate</font></td>
+            <td><font size="2">30 frames/second</font></td>
           </tr>
           <tr> 
-            <td><font size="2">音質</font></td>
-            <td><font size="2">１６bit２２kHzMono</font></td>
+            <td><font size="2">Sound</font></td>
+            <td><font size="2">16-bit, 22KHz Mono</font></td>
           </tr>
           <tr> 
-            <td><font size="2">ファイルサイズ</font></td>
+            <td><font size="2">File Size</font></td>
             <td><font size="2">2.6MB</font></td>
           </tr>
           <tr>
@@ -62,26 +62,26 @@
 
         <table width="320" border=1 cellpadding=0 bgcolor="#eeeeee">
           <tr> 
-            <td colspan=2 align="center"><font size="2">テイルス編</font></td>
+            <td colspan=2 align="center"><font size="2">Tails Edition</font></td>
           </tr>
           <tr> 
-            <td><font size="2">画面サイズ</font></td>
-            <td><font size="2">２４０×１８０</font></td>
+            <td><font size="2">Resolution</font></td>
+            <td><font size="2">240x180</font></td>
           </tr>
           <tr> 
-            <td><font size="2">圧縮</font></td>
-            <td><font size="2">MPEG：フルカラー</font></td>
+            <td><font size="2">Compression</font></td>
+            <td><font size="2">MPEG: Full color</font></td>
           </tr>
           <tr> 
-            <td><font size="2">フレーム数</font></td>
-            <td><font size="2">３０フレーム/秒</font></td>
+            <td><font size="2">Framerate</font></td>
+            <td><font size="2">30 frames/second</font></td>
           </tr>
           <tr> 
-            <td><font size="2">音質</font></td>
-            <td><font size="2">１６bit２２kHzMono</font></td>
+            <td><font size="2">Sound</font></td>
+            <td><font size="2">16-bit, 22KHz Mono</font></td>
           </tr>
           <tr> 
-            <td><font size="2">ファイルサイズ</font></td>
+            <td><font size="2">File Size</font></td>
             <td><font size="2">2.6MB</font></td>
           </tr>
           <tr>
@@ -100,26 +100,26 @@
 
         <table width="320" border=1 cellpadding=0 bgcolor="#eeeeee">
           <tr> 
-            <td colspan=2 align="center"><font size="2">ナックルズ編</font></td>
+            <td colspan=2 align="center"><font size="2">Knuckles Edition</font></td>
           </tr>
           <tr> 
-            <td><font size="2">画面サイズ</font></td>
-            <td><font size="2">２４０×１８０</font></td>
+            <td><font size="2">Resolution</font></td>
+            <td><font size="2">240x180</font></td>
           </tr>
           <tr> 
-            <td><font size="2">圧縮</font></td>
-            <td><font size="2">MPEG：フルカラー</font></td>
+            <td><font size="2">Compression</font></td>
+            <td><font size="2">MPEG: Full color</font></td>
           </tr>
           <tr> 
-            <td><font size="2">フレーム数</font></td>
-            <td><font size="2">３０フレーム/秒</font></td>
+            <td><font size="2">Framerate</font></td>
+            <td><font size="2">30 frames/second</font></td>
           </tr>
           <tr> 
-            <td><font size="2">音質</font></td>
-            <td><font size="2">１６bit２２kHzMono</font></td>
+            <td><font size="2">Sound</font></td>
+            <td><font size="2">16-bit, 22KHz Mono</font></td>
           </tr>
           <tr> 
-            <td><font size="2">ファイルサイズ</font></td>
+            <td><font size="2">File Size</font></td>
             <td><font size="2">2.6MB</font></td>
           </tr>
           <tr>
@@ -137,26 +137,26 @@
 
         <table width="320" border=1 cellpadding=0 bgcolor="#eeeeee">
           <tr> 
-            <td colspan=2 align="center"><font size="2">エミー編</font></td>
+            <td colspan=2 align="center"><font size="2">Amy Edition</font></td>
           </tr>
           <tr> 
-            <td><font size="2">画面サイズ</font></td>
-            <td><font size="2">２４０×１８０</font></td>
+            <td><font size="2">Resolution</font></td>
+            <td><font size="2">240x180</font></td>
           </tr>
           <tr> 
-            <td><font size="2">圧縮</font></td>
-            <td><font size="2">MPEG：フルカラー</font></td>
+            <td><font size="2">Compression</font></td>
+            <td><font size="2">MPEG: Full color</font></td>
           </tr>
           <tr> 
-            <td><font size="2">フレーム数</font></td>
-            <td><font size="2">３０フレーム/秒</font></td>
+            <td><font size="2">Framerate</font></td>
+            <td><font size="2">30 frames/second</font></td>
           </tr>
           <tr> 
-            <td><font size="2">音質</font></td>
-            <td><font size="2">１６bit２２kHzMono</font></td>
+            <td><font size="2">Sound</font></td>
+            <td><font size="2">16-bit, 22KHz Mono</font></td>
           </tr>
           <tr> 
-            <td><font size="2">ファイルサイズ</font></td>
+            <td><font size="2">File Size</font></td>
             <td><font size="2">2.6MB</font></td>
           </tr>
           <tr>
@@ -175,26 +175,26 @@
 
         <table width="320" border=1 cellpadding=0 bgcolor="#eeeeee">
           <tr> 
-            <td colspan=2 align="center"><font size="2">ビッグ編</font></td>
+            <td colspan=2 align="center"><font size="2">Big Edition</font></td>
           </tr>
           <tr> 
-            <td><font size="2">画面サイズ</font></td>
-            <td><font size="2">２４０×１８０</font></td>
+            <td><font size="2">Resolution</font></td>
+            <td><font size="2">240x180</font></td>
           </tr>
           <tr> 
-            <td><font size="2">圧縮</font></td>
-            <td><font size="2">MPEG：フルカラー</font></td>
+            <td><font size="2">Compression</font></td>
+            <td><font size="2">MPEG: Full color</font></td>
           </tr>
           <tr> 
-            <td><font size="2">フレーム数</font></td>
-            <td><font size="2">３０フレーム/秒</font></td>
+            <td><font size="2">Framerate</font></td>
+            <td><font size="2">30 frames/second</font></td>
           </tr>
           <tr> 
-            <td><font size="2">音質</font></td>
-            <td><font size="2">１６bit２２kHzMono</font></td>
+            <td><font size="2">Sound</font></td>
+            <td><font size="2">16-bit, 22KHz Mono</font></td>
           </tr>
           <tr> 
-            <td><font size="2">ファイルサイズ</font></td>
+            <td><font size="2">File Size</font></td>
             <td><font size="2">2.6MB</font></td>
           </tr>
           <tr>
@@ -213,26 +213,26 @@
 
         <table width="320" border=1 cellpadding=0 bgcolor="#eeeeee">
           <tr> 
-            <td colspan=2 align="center"><font size="2">Ｅ-１０２”ガンマ”編</font></td>
+            <td colspan=2 align="center"><font size="2">E-102 "Gamma" Edition</font></td>
           </tr>
           <tr> 
-            <td><font size="2">画面サイズ</font></td>
-            <td><font size="2">２４０×１８０</font></td>
+            <td><font size="2">Resolution</font></td>
+            <td><font size="2">240x180</font></td>
           </tr>
           <tr> 
-            <td><font size="2">圧縮</font></td>
-            <td><font size="2">MPEG：フルカラー</font></td>
+            <td><font size="2">Compression</font></td>
+            <td><font size="2">MPEG: Full color</font></td>
           </tr>
           <tr> 
-            <td><font size="2">フレーム数</font></td>
-            <td><font size="2">３０フレーム/秒</font></td>
+            <td><font size="2">Framerate</font></td>
+            <td><font size="2">30 frames/second</font></td>
           </tr>
           <tr> 
-            <td><font size="2">音質</font></td>
-            <td><font size="2">１６bit２２kHzMono</font></td>
+            <td><font size="2">Sound</font></td>
+            <td><font size="2">16-bit, 22KHz Mono</font></td>
           </tr>
           <tr> 
-            <td><font size="2">ファイルサイズ</font></td>
+            <td><font size="2">File Size</font></td>
             <td><font size="2">2.6MB</font></td>
           </tr>
           <tr>
@@ -251,26 +251,26 @@
 
         <table width="320" border=1 cellpadding=0 bgcolor="#eeeeee">
           <tr> 
-            <td colspan=2 align="center"><font size="2">Ｄｒ．エッグマン編</font></td>
+            <td colspan=2 align="center"><font size="2">Dr. Eggman Edition</font></td>
           </tr>
           <tr> 
-            <td><font size="2">画面サイズ</font></td>
-            <td><font size="2">２４０×１８０</font></td>
+            <td><font size="2">Resolution</font></td>
+            <td><font size="2">240x180</font></td>
           </tr>
           <tr> 
-            <td><font size="2">圧縮</font></td>
-            <td><font size="2">MPEG：フルカラー</font></td>
+            <td><font size="2">Compression</font></td>
+            <td><font size="2">MPEG: Full color</font></td>
           </tr>
           <tr> 
-            <td><font size="2">フレーム数</font></td>
-            <td><font size="2">３０フレーム/秒</font></td>
+            <td><font size="2">Framerate</font></td>
+            <td><font size="2">30 frames/second</font></td>
           </tr>
           <tr> 
-            <td><font size="2">音質</font></td>
-            <td><font size="2">１６bit２２kHzMono</font></td>
+            <td><font size="2">Sound</font></td>
+            <td><font size="2">16-bit, 22KHz Mono</font></td>
           </tr>
           <tr> 
-            <td><font size="2">ファイルサイズ</font></td>
+            <td><font size="2">File Size</font></td>
             <td><font size="2">2.6MB</font></td>
           </tr>
           <tr>
@@ -289,7 +289,7 @@ SONIC TEAM 1998
 </td></tr>
 </table>
 </center>
-<div align="center"><a href="../index.html"><font size="2">&lt;&lt;戻る&gt;&gt;</font> 
+<div align="center"><a href="../index.html"><font size="2">&lt;&lt;Return&gt;&gt;</font> 
   </a></div>
 </body>
 </html>
