--- a/japan/sonicadv/dload/omake1102.html
+++ b/japan/sonicadv/dload/omake1102.html
@@ -21,7 +21,7 @@
 
 <tr>
       <td colspan=2 bgcolor="#ffffdd"> <font size="2">It's been a while since we've been here, so here's an extra wallpaper download!<br>
-        This time, two shots of Sonic and Chao! We've prepared a slightly larger size, so those of you with high-end machines can relax! Use it!</font> 
+        This time, it's Sonic and Chao! We've prepared a slightly larger size, so those of you with high-end machines can relax! Use it!</font> 
       </td>
     </tr>
 
