--- a/japan/sonicadv_int/index.html
+++ b/japan/sonicadv_int/index.html
@@ -24,7 +24,7 @@ SONIC ADVENTURE International
       <P align="center"> <font size="2"><a href="http://segadirect.jp/" target="_blank"> 
         <img src="sadv_int_image/segadirect.gif" width="100" height="56" border="0"></a><br>
         <a href="http://segadirect.jp/" target="_blank"> <font color="#ff0000"><blink> 
-        Can also be purchased through mail oder on Sega Direct!</blink></font></a><br>
+        Can also be purchased through mail order on Sega Direct!</blink></font></a><br>
         </font>
       <P align="center"> <font color="#0000ff" font="font" size="2"><I><B>It could be you! The fastest guy in the world!</B></I></font><font size="2"><br>
         </font>
