final sage-related thing today

--- a/sage/missing.html
+++ b/sage/missing.html
@@ -5,6 +5,7 @@
 <link rel="icon" href="/favicon.ico">
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
-<h1 align="center">The Toon's Town</h1>
-<h3 align="center">Hi. Feel free to look around here. There isn't much at the moment.</h2>
+<h1 align="center">Hmmmm.... Something seems to be missing here.</h1>
+<h2 align="center">In the meantime, why not look at other booths?</h2>
+<h3 align="center">...or make a contribution?</h3>
 </html>
