more adventure translations!

--- a/japan/sonicadv/info/818pc.html
+++ b/japan/sonicadv/info/818pc.html
@@ -18,7 +18,7 @@
 
 <font size=4 color="#eeeeee"><b>
 
-これは...！
+This is...!
 
 </b></font>
 
@@ -36,11 +36,11 @@
 
 <font size=2 color="#eeeeee">
 
-こいつはいったい何だ！？<br>
+What the hell is this?<br>
 
-　...今すべてを解き明かすことはできないけど、発表会ではきっと...<br>
+　...I can't reveal everything now, but I'm sure the presentation will...<br>
 
-それまでは想像して楽しんでね。
+Until then, just imagine and enjoy.
 
 </font>
 
@@ -60,7 +60,7 @@ SONIC TEAM INFORMATION
 
 </table>
 
-  <font size="2" color="#FFFFFF"><a href="../index.html">&lt;&lt;戻る&gt;&gt; </a></font> 
+  <font size="2" color="#FFFFFF"><a href="../index.html">&lt;&lt;Return&gt;&gt; </a></font> 
 </center></body>
 
 </html>
