--- a/japan/sonicadv/info/822cf.html
+++ b/japan/sonicadv/info/822cf.html
@@ -20,7 +20,7 @@
 
 <font face="ＤＦＰPOP体" color="white" size=5><b>
 
-ソニックアドベンチャー制作発表会告知ＣＦ
+Sonic Adventure Production Announcement CF
 
 </b></font>
 
@@ -34,11 +34,11 @@
 
 
 
-８月１０日くらいからいよいよ始まる告知ＣＦ。<br>
+The announcement CF will finally start on August 10th or so.<br>
 
-関東在住の人は、セガの提供枠をチェックしよう！
+If you live in the Kanto region, check out the slots provided by Sega!
 
-その他の地域の人も、ダウンロードして観てね！
+For the rest of the world, download and watch!
 
 
 
@@ -60,7 +60,7 @@
 
 	<font size=3><b>
 
-	テレビ版
+	Television version
 
 	</b></font>
 
@@ -76,15 +76,15 @@
 
 		<tr><td colspan=2><font size=2>
 
-発表会までのわずかな期間しかかからない、レアなＣＦ。
+This is a rare CF that will only take a short time to present.
 
-「HEY!HEY!HEY!」など、セガの提供番組を観てると見れるよ。
+"HEY!" and other Sega-provided programs, you can watch it.
 
-関東地域以外のひとにもぜひ観て欲しくて、画質はＴＶよりちょっと落ちるかもしれないけど、
+We wanted people outside of the Kanto region to see it, so we put it on the web, although the quality
 
-WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
+may be a little lower than on TV. We'd be happy if you could send us an email with your impressions of it.<br>
 
-このつづきは発表会で！
+More on this in the presentation!
 
 		</font>
 
@@ -100,11 +100,11 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<tr><td>
 
-		<b>１５秒バージョン</b><br>
+		<b>15 second version</b><br>
 
 		<font size=2>
 
-		２つの画面サイズを用意してあります。
+		Two video qualities are available.
 
 		</font>
 
@@ -114,7 +114,7 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<font size=2>
 
-		ダウンロード<br>
+		Download<br>
 
 <a href="cffile/cf15s_l.mov"><b>192×144</b></a><br>[QuickTime/10fps:1138KB]<br>
 
@@ -134,11 +134,11 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<tr><td>
 
-		<b>３０秒バージョン</b><br>
+		<b>30 second version</b><br>
 
 		<font size=2>
 
-		２つの画面サイズを用意してあります。
+		Two video qualities are available.
 
 		</font>
 
@@ -148,7 +148,7 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<font size=2>
 
-		ダウンロード<br>
+		Download<br>
 
 <a href="cffile/cf30s_l.mov"><b>192×144</b></a><br>[QuickTime/10fps:2310KB]<br>
 
@@ -178,7 +178,7 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 	<font size=3><b>
 
-	ラジオ版
+	Radio version
 
 	</b></font>
 
@@ -194,9 +194,9 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<tr><td colspan=2><font size=2>
 
-今回発表会をやるにあたり、よりたくさんのユーザーに来ていただきたいと思い、初めてラジオＣＦに出てみました。<br>
+For this presentation, we wanted to reach as many users as possible, so we participated in a radio CF for the first time.<br>
 
-１３回も取り直したりして大変だったけど、出来映えはどうですか？それでは、会場でお待ちしています。 中 裕司
+It was a lot of work, and I had to redo it 13 times, but how is it coming along? We'll be waiting for you at the venue. -Yuji Naka
 
 		</font>
 
@@ -212,11 +212,11 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<tr><td>
 
-		<b>ＴＶ連動編</b><br>
+		<b>TV Linkage Edition</b><br>
 
 		<font size=2>
 
-		３つのファイルタイプがあります。
+		There are three file types.
 
 		</font>
 
@@ -226,7 +226,7 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<font size=2>
 
-		ダウンロード<br>
+		Download<br>
 
 <a href="cffile/cf1_22_8.wav"><b>ＷＡＶＥ</b></a><br>[22K/8Bit/Mono:431KB]<br>
 
@@ -248,11 +248,11 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<tr><td>
 
-		<b>中さん編</b><br>
+		<b>The middle part</b><br>
 
 		<font size=2>
 
-		３つのファイルタイプがあります。
+		There are three file types.
 
 		</font>
 
@@ -264,7 +264,7 @@ WEBにのせてみました。観た感想なんかをメールしてくれるとうれしいな。<br>
 
 		<font size=2>
 
-		ダウンロード<br>
+		Download<br>
 
 <a href="cffile/cf2_22_8.wav"><b>ＷＡＶＥ</b></a><br>[22K/8Bit/Mono:431KB]<br>
 
@@ -306,7 +306,7 @@ SONIC TEAM INFORMATION
 
 </TABLE>
 
-  <font size="2"><a href="../index.html">&lt;&lt;戻る&gt;&gt; </a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt; </a></font> 
 </center>
 
 </body>
