--- a/japan/sonicadv/info/news1218.html
+++ b/japan/sonicadv/info/news1218.html
@@ -16,7 +16,7 @@
 
 <font size=4 color="#ffffff">
 
-おしらせ
+Notification
 
 </font>
 
@@ -32,53 +32,53 @@
 
 <font size=3>
 
-おまたせ。やっとできたよ！！
+Sorry for the delay. It's finally done!
 
 <br>
 
-ようやく発売にこぎつけました。なかなかの自信作に仕上がっているので、ぜひみんなも手に取って遊んでね。
+We've finally managed to get it released. We're very proud of it, so please pick it up and play it.
 
 <p>
 
-今回のおしらせでは、「ソニック アドベンチャー」本編以外にもこんな魅力があるよっていうのを伝えようと思います。
+In this announcement, we'd like to tell you that there is more to Sonic Adventure than just the main story.
 
 <p>
 
-「ソニック アドベンチャー」にはインターネットブラウザの機能も盛り込まれていて、さらに、このブラウザからじゃないと
+Sonic Adventure also includes an internet browser, and there are some sites that can only be viewed through this browser.
 
-観ることのできないサイトを用意してあるんだ。<br>
+We have a site for you that you can't visit.<br>
 
-つまり、ソニックを買ってくれた人たちだけが楽しめるホームページがあるってこと。
-
-<p>
-
-これからここで、いろいろな仕掛けでゲームの世界を広げていこうと思ってます。<br>
-
-あんなことやこんなことまで、まだヒミツなんだけど、メチャクチャ楽しくなると思うよ！<br>
-
-まずは体験してみるっきゃないね！
+This means that there is a website that only people who have purchased Sonic Adventure can enjoy.
 
 <p>
 
-ということで、第一弾は、クリスマス限定ダウンロードアイテム。<br>
+We're planning to expand the game world here with various tricks.<br>
 
-「ステーションスクエアに、クリスマスツリーを飾ろう！」<br>
+It's still a secret, but we're sure it'll be a lot of fun!<br>
 
-まずはこんな感じで始めてみます。新しいビジュアルメモリの用意はいいかな？
-
-<p>
-
-これはその名のとおり、ゲームを始めるとまず始めに立ち寄る街「ステーションスクエア」に
-
-クリスマスツリーを飾っちゃおう、っていうアイテムです。<br>
-
-もちろん、ただ飾るだけじゃなくて、ちょっとした仕掛けが・・・。<br>
-
-おっと、ここから先は、実際にダウンロードして体験してみてね！
+I guess we'll just have to try it first!
 
 <p>
 
-さあ、「ソニック アドベンチャー」を買ったら、インターネットにつないで、新たな可能性に触れてみよう！<br>
+So, the first item is a Christmas-only downloadable item.<br>
+
+Let's decorate a Christmas tree at Station Square!<br>
+
+Let's start with something like this. Are you ready for a new visual memory?
+
+<p>
+
+As the name suggests, this is an item to decorate a Christmas tree in Station Square,
+
+the first place you stop by when you start the game.<br>
+
+Of course, it's not just a decoration, but a little trick...<br>
+
+Whoa, from here on out, you'll have to actually download and experience it for yourself!
+
+<p>
+
+Now, once you've bought Sonic Adventure, connect it to the Internet and explore the new possibilites!<br>
 
 </font>
 
@@ -87,7 +87,7 @@
 </table>
 
 <br><br><fontsize="2">
-  <a href="../index.html"><<戻る>></a></font> 
+  <a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
