--- a/japan/sonicadv/info/news1225.html
+++ b/japan/sonicadv/info/news1225.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>ソニック アドベンチャー発売！</title>
+<title>Sonic Adventure Launch</title>
 
 </head>
 
@@ -16,7 +16,7 @@
 
 <font size=3 color="#ffffff">
 
-ソニックアドベンチャー発売記念イベント
+Sonic Adventure Release Celebration Event
 
 </font>
 
@@ -28,9 +28,9 @@
 
 <font size=2>
 
-１２月２３日、ソニックアドベンチャーの発売日に、プロデューサー中裕司とソニック達が、新宿・池袋・秋葉原の販売店を応援しにかけつけたぞ。
+On December 23, the release date of Sonic Adventure, producer Yuji Naka as well as Sonic and his friends came to support the game at retailers in Shinjuku, Ikebukuro, and Akihabara.
 
-どのお店でもおかげさまで大盛況！新宿１番乗りの彼は朝５時から並んでくれたんだ。
+Thanks to all the stores, it was a great success! He was the first one to get to Shinjuku, and he lined up from five in the morning.
 
 </font>
 
@@ -93,7 +93,7 @@ SONIC TEAM 1998
 </table>
 
 <fontsize="2">
-  <a href="../index.html"><<戻る>></a></font> 
+  <a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
