--- a/japan/sonicadv/info/newsonic.html
+++ b/japan/sonicadv/info/newsonic.html
@@ -16,7 +16,7 @@
 
 <font face="ＤＦＰPOP体" size=5 color="white"><b>
 
-これがソニックだ！
+This is Sonic!
 
 </b></font>
 
@@ -32,11 +32,11 @@
 
 <font size=2 color="black">
 
-今まで目と口だけが見えていたソニック。今日の発表会でついに全身をあらわしたよ！<br>
+Until now, only his eyes and mouth have been visible. But today, he finally showed his whole body!<br>
 
-ちょっとニラミをきかし、今にも動き出しそうなポーズ。<br>
+He posed as if he was about to start moving.<br>
 
-さらにワルガキっぽくなって登場した、これが新しいソニックだ！
+He's even more of a badass now, and this is the new Sonic!
 
 </font>
 
@@ -57,7 +57,7 @@ SONIC TEAM INFORMATION
 </table>
 
 <br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
