--- a/japan/sonicadv/info/omake0716.html
+++ b/japan/sonicadv/info/omake0716.html
@@ -20,7 +20,7 @@
 
 <b>
 
-	おまけの壁紙ダウンロード！
+	Extra wallpaper download!
 
 
 
@@ -48,9 +48,9 @@
 
 
 
-はい、最後はソニックチーム恒例のおまけの壁紙です！
+Yes, and last but not least, the Sonic Team's customary extra wallpaper!
 
-お好きなほうをダウンロードして使ってね！
+You can download and use whichever one you like!
 
 
 
@@ -60,15 +60,15 @@
 
 <td bgcolor="white" height="140">
 
-[ <a href="img0716/sonic640.zip">　６４０×４８０：フルカラーＢＭＰファイル</a> ]<br>
+[ <a href="img0716/sonic640.zip">640x480: Full color BMP file</a> ]<br>
 
-[ <a href="img0716/sonic1024.zip">１０２４×７６８：フルカラーＢＭＰファイル</a> ]<br>
+[ <a href="img0716/sonic1024.zip">1024x768: Full color BMP file</a> ]<br>
 
-[ <a href="img0716/sonic1280.zip">１２８０×９６０：フルカラーＢＭＰファイル</a> ]
+[ <a href="img0716/sonic1280.zip">1280x960: Full color BMP file</a> ]
 
 <p>
 
-この絵は今回の発表会告知のキービジュアルだよ。
+This picture is the key visual for this presentation announcement.
 
 </td>
 
@@ -97,7 +97,7 @@ SONIC TEAM INFORMATION
 
 
 <br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
