--- a/japan/sonicadv/info/presonic.html
+++ b/japan/sonicadv/info/presonic.html
@@ -16,7 +16,7 @@
 
 <font face="ＤＦＰPOP体" size=5 color="white"><b>
 
-リニューアルソニック明日公開！
+Redesigned Sonic reveal tomorrow!
 
 </b></font>
 
@@ -28,9 +28,9 @@
 
 <font size=2 color="black">
 
-いよいよ、明日に迫った発表会。新しくリニューアルデザインされたソニックも、明日デビュー！<br>
+Finally, the presentation is coming up tomorrow. The newly redesigned Sonic will also debut tomorrow!<br>
 
-きょうはシルエットをまず公開。それじゃ発表会で会おう！
+Today, we'll show you the silhouette first. We'll see you at the presentation!
 
 </font>
 
@@ -55,7 +55,7 @@ SONIC TEAM INFORMATION
 </table>
 
 <br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
