--- a/japan/sonicadv/info/screen822.html
+++ b/japan/sonicadv/info/screen822.html
@@ -16,7 +16,7 @@
 
 <font  face="ＤＦＰPOP体" color="white" size=5><b>
 
-画面写真を少しだけ。
+Just a few screenshots.
 
 </b></font>
 
@@ -26,9 +26,9 @@
 
 <td bgcolor="#eeeeee" valign="top">
 
-画面写真公開第一弾だよ。<br>
+Here's the first screenshot.<br>
 
-今日はこの３点。次回以降をお楽しみに。
+These are the othet three screenshots for today. Please look forward to the next installments.
 
 
 
@@ -63,7 +63,7 @@ SONIC TEAM INFORMATION
 </table>
 
 <br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
