--- a/japan/sonicadv/info/train.html
+++ b/japan/sonicadv/info/train.html
@@ -20,7 +20,7 @@
 
 <b>
 
-	ファミ通トレイン
+	Famitsu Train
 
 
 
@@ -54,7 +54,7 @@
 
 <font color="white"><b>
 
-今日から山手線でソニック最新作の制作発表会を告知！
+Starting today, the Yamanote Line will announce the production launch of Sonic's latest work!
 
 </b></font>
 
@@ -64,19 +64,19 @@
 
 <tr><td bgcolor="white" height="160" colspan=2>
 
-７／１６～３１の期間、週間ファミ通５００号を記念して、東京の山手線にファミ通トレインが走るんだけど、
+To commemorate the 500th issue of Famitsu Weekly, a Famitsu train will be running on the Yamanote Line in Tokyo from July 16 to 31,
 
-その車両の窓側の広告スペースを丸ごとソニックが占領しちゃうのだ！
-
-<p>
-
-山手線は１日１３周する環状線なので、１時間待っていれば内回り／外回りのどちらかには来るはず！
-
-期間限定なのでぜひ乗ってみてね！
+and Sonic will be taking up the entire advertising space on the window of the train!
 
 <p>
 
-さあ、ソニックといっしょに東京をぐるぐるまわってみよう！
+The Yamanote Line is a circular line that goes around 13 times a day, so if you wait an hour, you're bound to come to one of the inner/outer trains!
+
+It's only for a limited time, so get on it!
+
+<p>
+
+Now, let's go around Tokyo with Sonic!
 
 </td></tr>
 
@@ -103,7 +103,7 @@ SONIC TEAM INFORMATION
 
 
 <br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
