--- a/japan/sonicadv/info/nanbei3.html
+++ b/japan/sonicadv/info/nanbei3.html
@@ -16,7 +16,7 @@
 
 <font size=４ color="white"><b>
 
-ソニックチーム南米へ行く（４）
+Sonic Team Goes to South America (4)
 
 </b></font>
 
@@ -26,7 +26,7 @@
 
 <font size=2>
 
-[<a href="nanbei2.html">ソニックチーム南米へ行く(3)</a>]
+[<a href="nanbei2.html">Sonic Team Goes to South America (3)</a>]
 
 </font>
 
@@ -36,78 +36,78 @@
 
 
 
-５日は高山の中にある街、クスコへ向かう。<br>
+On the 5th, we headed to Cusco, a city located in the high mountains.<br>
 
-クスコはかつてインカ帝国の首都であった街で、滅んでからもなお人々はここに住み続けている。
+Cusco was once the capital of the Inca Empire, and even after its demise, people continue to live here.
 
-標高3400メートルの盆地の中に人と家がひしめき合っている感じだ。
-
-<p>
-
-６日はさらに山間部の高山に潜む城塞都市「マチュピチュ」へ。かつてあの宮崎駿監督もこの地を訪れたという。<br>
-
-雲の中に現れたり消えたりする眼下の石造りの家々。降ったりやんだりの雨。すぐそこにあるのに霞む山々。<br>
-
-確かに眼下に広がる美しい幻の空中都市は、伝説の空中庭園都市・ラピュタを思わせる。
+We felt like we were in a basin at an altitude of 3400 meters with people and houses crowded together.
 
 <p>
 
-12月７日。最後の目的地である「パチャカマ」へと向かう。高山の薄い空気から解放される。<br>
+On the 6th, we went to Machu Picchu, a fortified city hidden in the high mountains. It is said that Hayao Miyazaki once visited this place.<br>
 
-バスで山を下りていくとみるみる砂漠が広がっていった。まわりには隠すものが何もない。遠くにいてもよくわかる。<br>
+The stone houses below us appear and disappear in the clouds. The rain falls on and off. The mountains are gith there, but hazy.<br>
 
-パチャカマ神殿は非常に狭い通路がたくさん続いており、まるで迷路のようになっている。
-
-高台にある黄土色の遺跡はすさまじい強風だ。建物の上に上がると遠く西側に大きく太平洋が広がっていた。
+Indeed, the beautiful aerial city spreading out below us reminded us of the legendary Laputa, the hanging garden city.
 
 <p>
 
-こうして６人は心身ともに疲れ果てながら約２週間の取材旅行すべての目的地を回り終えた。<br>
+December 7. We headed to our final destination, Pachacama. We are released from the thin air of the high mountains.<br>
 
-これから再び30時間の帰国までのフライトが残っているだけだった。
+As we took the bus down the mountains, the desert began to spread out. There was nothing to hide around us. We could see it clearly even from a distance.<br>
 
-<p>
+The Pachacama Temple is like a maze with many very narrow passages.
 
-今回視察した様々な場所は、「遺跡」という言葉ひとつでまとめられるのだが、それぞれが全く異なる個性と魅力に溢れていた。<br>
-
-そして、行った者しか味わうことのできない歴史の重みや存在感といった貴重な経験、目に焼き付けた美しさを６人は肌で感じることができたのである。
+The ochre-colored ruins on the hill were in a tremendous gale. As we climbed to the top of the building, we could see the Pacific Ocean stretching far to the west.
 
 <p>
 
-　この旅から早くも２０ヶ月が経とうとしている。旅によって、彼らのインスピレーションがどのように刺激されたのか。<br>
+Thus, the six of us, exhausted both physically and mentally, finished our two-week trip to all the destinations.<br>
 
-それはこれまで謎のままであった。しかしそれももうすぐわかる。<br>
-
-『ソニックアドベンチャー』の中で……。
+All that was left was another 30-hour flight home.
 
 <p>
 
-おわり。
+The various places we visited this time can be summed up in one word, "ruins", but each was full of its own unique character and charm.<br>
+
+The six of us were able to experience the weight and presence of history, a precious experience that only those who have been there can experience, and the beauty that was burned into our eyes.
+
+<p>
+
+　Twenty months have already passed since this trip. How has their inspiration been stimulated by the trip?<br>
+
+it has remained a mystery until now. But we will soon find out.<br>
+
+In Sonic Adventure...
+
+<p>
+
+The end.
 
 
 
 </td></tr>
 
-<td><img src="img0821/nan4_0.jpg" width="256" height="192" border=1><br>あ～～酸素うすい。</td>
+<td><img src="img0821/nan4_0.jpg" width="256" height="192" border=1><br>Aaaaahhhh, the oxygen is too weak.</td>
 
-<td><img src="img0821/nan4_5.jpg" width="256" height="192" border=1><br>そんな時はこの「コカ茶」を飲む、と。</td>
+<td><img src="img0821/nan4_5.jpg" width="256" height="192" border=1><br>In such a case, we would drink this coca tea.</td>
 
 </tr>
 
 <tr>
 
-<td><img src="img0821/nan4_1.jpg" width="256" height="192" border=1><br>すごい！マチュピチュはほんとにあったんだ！</td>
+<td><img src="img0821/nan4_1.jpg" width="256" height="192" border=1><br>Amazing! Machu Picchu was really there!</td>
 
 
 
-<td><img src="img0821/nan4_3.jpg" width="256" height="192" border=1><br>クスコの車窓から。</td>
+<td><img src="img0821/nan4_3.jpg" width="256" height="192" border=1><br>From a train window in Cusco.</td>
 
 </tr>
 
 <tr>
 
 <td><img src="img0821/nan4_2.jpg" width="256" height="192" border=1><br>
-  おまけ。</td>
+  Extra.</td>
 
 <td>&nbsp;</td>
 
@@ -128,7 +128,7 @@ SONIC TEAM 1998
 </table>
 
 <center><br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body></html>
