more work on sonicadv

--- a/japan/sonicadv/info/advlogo.html
+++ b/japan/sonicadv/info/advlogo.html
@@ -18,7 +18,7 @@
 
 <font size=4><b>
 
-ソニック アドベンチャーのロゴ決定！
+Sonic Adventure logo confirmed!
 
 </b></font>
 
@@ -34,11 +34,11 @@
 
 <td valign="bottom">
 
-これが、完成したばかりのタイトルロゴ。<br>
+This is the newly completed title logo.<br>
 
-アドベンチャー、つまり「冒険」っていう言葉と、今回のゲームのワールドをイメージさせる
+It's based on the word "adventure" and the motifs of
 
-「空」「海」「大地」をモチーフにしたものなんだ。<p>
+sky, sea, and earth that represent the world of this game.<p>
 
 </td></tr>
 
@@ -54,7 +54,7 @@ SONIC TEAM INFORMATION
 
 </table>
 
-  <font size="2"><a href="../index.html">&lt;&lt;戻る&gt;&gt; </a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt; </a></font> 
 </center></body>
 
 </html>
