--- a/japan/sonicadv/info/advnews1106.html
+++ b/japan/sonicadv/info/advnews1106.html
@@ -16,11 +16,11 @@
 
 <font size=5 color="white"><b>
 
-[緊急告知]<br></b></font>
+[Urgent announcement]<br></b></font>
 
 <font size=4 color="white"><b>
 
-ソニック アドベンチャーＣＦ放映！
+Sonic Adventure CF begins airing!
 
 </b></font>
 
@@ -28,11 +28,11 @@
 
 <tr><td colspan=2>
 
-ソニックアドベンチャーのＣＦが、いよいよ放映開始！<br>
+Sonic Adventure's CF will finally start airing!<br>
 
-今回のＣＦは、<b>各キャラクターをフィーチャリングした７つのバージョン</b>を制作したんだ！
+For this CF, <b>we've created seven versions</b>, each featuring a different character!
 
-とりあえず判っている放映スケジュールが下の表だよ。<br>全てのバージョンをチェックしよう！
+In the meantime, here's the schedule we know about.<br>Check out all the versions!
 
 </td></tr>
 
@@ -40,91 +40,91 @@
 
 <td colspan=2 height="16" align="center" bgcolor="#eeeeee">
 
-<b>「ＤＡＩＢＡッテキ！」（フジ　月～金　１６：２５～）</b>
+<b>DAIBA Teki! (Fuji, Monday through Friday, 16:25)</b>
 
 </td></tr>
 
-<tr><td>１１/１６（月）</td><td>ソニック　エッグマン</td></tr>
+<tr><td>November 16 (Monday)</td><td>Sonic, Eggman</td></tr>
 
-<tr><td>１１/１７（火）</td><td>ソニック　テイルス</td></tr>
+<tr><td>November 17 (Tuesday)</td><td>Sonic, Tails</td></tr>
 
-<tr><td>１１/１８（水）</td><td>ソニック　ナックルズ</td></tr>
+<tr><td>November 18 (Wednesday)</td><td>Sonic, Knuckles</td></tr>
 
-<tr><td>１１/１９（木）</td><td>ソニック　エミー</td></tr>
+<tr><td>November 19 (Thursday)</td><td>Sonic, Amy</td></tr>
 
-<tr><td>１１/２０（金）</td><td>ソニック　ビッグ</td></tr>
+<tr><td>November 20 (Friday)</td><td>Sonic, Big</td></tr>
 
 
 
 <td colspan=2 height="16" align="center" bgcolor="#eeeeee">
 
-<b>「ゲームＷＡＶＥ」（テレ東　水　２４：４５～）</b>
+<b>Game Wave (Teleto, Wednesday, 24:45)</b>
 
 </td></tr>
 
-<tr><td>１１/１８（水）</td><td>ソニック</td></tr>
+<tr><td>November 18 (Wednesday)</td><td>Sonic</td></tr>
 
 
 
 <td colspan=2 height="16" align="center" bgcolor="#eeeeee">
 
-<b>「おはスタ」（テレ東　７：０５～）</b>
+<b>Ohasuta (Teleto, 7:05)</b>
 
 </td></tr>
 
-<tr><td>１１/１７（火）</td><td>ソニック</td></tr>
+<tr><td>November 17 (Tuesday)</td><td>Sonic</td></tr>
 
-<tr><td>１１/１９（木）</td><td>ソニック</td></tr>
+<tr><td>November 19 (Thursday)</td><td>Sonic</td></tr>
 
 
 
 <td colspan=2 height="16" align="center" bgcolor="#eeeeee">
 
-<b>「蒸気探偵団」（テレ東　水　１８：００～）</b>
+<b>Steam Detectives (Teleto, Wednesday, 18:00)</b>
 
 </td></tr>
 
-<tr><td>１１/１８（水）</td><td>ソニック</td></tr>
+<tr><td>November 18 (Wednesday)</td><td>Sonic</td></tr>
 
 
 
 <td colspan=2 height="16" align="center" bgcolor="#eeeeee">
 
-<b>「時空探偵ゲンシクン」（テレ東　木　１８：００～）</b>
+<b>Toki Kukan Tantei Genshi Kun (Teleto, Thursday, 18:00)</b>
 
 </td></tr>
 
-<tr><td>１１/１９（木）</td><td>ソニック</td></tr>
+<tr><td>November 19 (Thursday)</td><td>Sonic</td></tr>
 
 
 
 <td colspan=2 height="16" align="center" bgcolor="#eeeeee">
 
-<b>「発明ＢＯＹカニパン」（テレ東　金　１８：００～）</b>
+<b>Invention Boy Kanipan (Teleto, Friday, 18:00)</b>
 
 </td></tr>
 
-<tr><td>１１/２０（金）</td><td>ソニック</td></tr>
+<tr><td>November 20 (Friday)</td><td>Sonic</td></tr>
 
 
 
 <td colspan=2 height="16" align="center" bgcolor="#eeeeee">
 
-<b>「彼氏彼女の事情」（テレ東　金　１８：３０～）</b>
+<b>Kanojo Kanojo no Jijou (Teleto, Friday, 18:30)</b>
 
 </td></tr>
 
-<tr><td>１１/２０（金）</td><td>ソニック</td></tr>
+<tr><td>November 20 (Friday)</td><td>Sonic</td></tr>
 
 
 
 <td colspan=2 height="16" align="center" bgcolor="#eeeeee">
 
-<b>「ラスチャン」（テレ朝　月～木　２４：５０～）</b>
+<b>Las Chan (Telecho, Monday-Thursday, 24:50)</b>
 
 </td></tr>
 
-<tr><td valign="top">１１/１６（月）～<br>１１/１９（木）</td><td valign="top">ソニック</td></tr>
+<tr><td valign="top">November 16 (Monday) to<br>November 19 (Thursday)</td><td valign="top">Sonic</td></tr>
 
 
 
@@ -132,11 +132,11 @@
 
 <font size=2>
 
-※一部は東京(関東)地区限定のオンエアとなります。<br>
+*Part of this program is only available in the Tokyo (Kanto) area.<br>
 
-※放送局は東京(関東)地区のものです。<br>
+*The broadcast stations are for the Tokyo (Kanto) area.<br>
 
-※提供番組は予告なく変更又は休止の可能性があります。<br>
+*Programs offered are subject to change or suspension without notice.<br>
 
 </font>
 
@@ -155,7 +155,7 @@ SONIC TEAM INFORMATION
 </table>
 
 </center>
-<div align="center"><font size="2"><a href="../index.html">&lt;&lt;戻る&gt;&gt; 
+<div align="center"><font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt; 
   </a></font> </div>
 </body>
 
