--- a/japan/sonicadv/info/buppan1.html
+++ b/japan/sonicadv/info/buppan1.html
@@ -16,9 +16,9 @@
 
 <font size=4 color="white"><b>
 
-緊急速報！！<br>
+Urgent news!<br>
 
-[発表会パンフレット＋ピンズセット]の通信販売も決定！！
+[Presentation Pamphlet + Pins Set] will also be available for mail order!
 
 </b></font>
 
@@ -38,13 +38,13 @@
 
 <hr>
 
-来ることができなかった人のために<b>会場限定アイテムの通信販売</b>も計画中！
+For those of you who couldn't make it, we're planning to sell <b>limited edition items</b> by mail order!
 
 <p>
 
-詳しくは<b>月刊ファミ通ブロス１１月号（９／３０発売号）</b>および
+For more information, check out the <b>November issue of Famitsu Bros. (out on September 30)</b> and
 
-<b>週刊ファミ通 １０／２３発売号</b>を見てね！
+the <b>October 23 issue of Weekly Famitsu</b>!
 
 </td></tr>
 
@@ -61,7 +61,7 @@ SONICTEAM INFORMATION
 </table>
 
 </center>
-<div align="center"><font size="2"><a href="../index.html">&lt;&lt;戻る&gt;&gt; 
+<div align="center"><font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt; 
   </a></font> </div>
 </body>
 
