--- a/japan/sonicadv/info/houkoku817.html
+++ b/japan/sonicadv/info/houkoku817.html
@@ -25,7 +25,7 @@
 <font  face="ＤＦＰPOP体" size=5 color="white"><b>
 
 
-発表会準備報告だよ
+Here's a report on the preparation for the presentation.
 
 
 </b></font>
@@ -40,7 +40,7 @@
 <font size=2 color="white"><b>
 
 
-[報告その１]
+[Report #1]
 
 
 </b></font><br>
@@ -49,7 +49,7 @@
 <font size=4 color="white"><b>
 
 
-司会はこの二人！
+These two are our hosts!
 
 
 </b></font>
@@ -70,10 +70,10 @@
 <td>
 
 
-発表会の司会をやってくれるのは、クリス・ペプラーさんと浜家有文子さん。<br>
+The MCs for the presentation are Chris Pepler and Yumiko Hamaya.<br>
 
 
-どんな盛り上がりになるのか楽しみだね！
+Can't wait to see what all the excitement is about!
 
 
 </td></tr>
@@ -88,7 +88,7 @@
 <font size=2 color="white"><b>
 
 
-[報告その２]
+[Report #2]
 
 
 </b></font><br>
@@ -97,7 +97,7 @@
 <font size=4 color="white"><b>
 
 
-中さんの登場方法がハデらしい！
+The way Mr. Naka appears seems to be a hit!
 
 
 </b></font>
@@ -109,13 +109,13 @@
 <tr><td colspan=2 height="80" valign="center" bgcolor="ffffcc">
 
 
-信頼できる情報筋によれば、どうやら<b>中さんがハデな登場をする</b>らしい。<br>
+According to reliable sources, it seems that <b>Mr. Naka will make a splashy appearance</b>.<br>
 
 
-本人も少し照れぎみながらも、一生懸命やるということなので、<br>
+He's a little embarrassed, but he's going to do his best.<br>
 
 
-その時は<b>みんなで盛り上げてね！</b>頼んだよ！
+You'll have to <b>get us all in the mood, then!</b> We're counting on you!
 
 
 </td></tr>
@@ -127,7 +127,7 @@
 <font size=2 color="white"><b>
 
 
-[報告その３]
+[Report #3]
 
 
 </b></font><br>
@@ -136,7 +136,7 @@
 <font size=4 color="white"><b>
 
 
-映像素材も製作快調！
+Production of the video material is going well!
 
 
 </b></font>
@@ -169,10 +169,10 @@
 <tr><td align="center" colspan=2>
 
 
-まずは、発表会で使用する映像素材の編集風景。<br>
+First, the editing of the video material to be used in the presentation.<br>
 
 
-長時間に及ぶ作業で、まったりとした時間が流れてます。
+It's been a long day of work, and we're having a great time.
 
 
 </td></tr>
@@ -219,7 +219,7 @@
 <tr><td colspan=2 align="center">
 
 
-こちらはオープニングを飾る映像。平和な街をパニックが襲います。<br>
+This is the opening video. Panic strikes a peaceful town.<br>
 
 
 
@@ -244,7 +244,7 @@ SONICTEAM INFORMATION
 
 
 <br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center></body>
 
 
