--- a/japan/sonicadv/info/jikki.html
+++ b/japan/sonicadv/info/jikki.html
@@ -16,7 +16,7 @@
 
 <font face="ＤＦＰPOP体" size=5 color="white"><b>
 
-おおっ！動いてるよ！
+Oh, my God! It's working!
 
 </b></font>
 
@@ -40,15 +40,15 @@
 
 <font size=3 color="black">
 
-ドリームキャストで動く「ソニックアドベンチャー」初公開！
+Sonic Adventure running on Dreamcast for the first time!
 
 <p>
 
-今ソニックチームは発表会準備で大忙し！<br>
+Right now the Sonic team is busy preparing for the presentation!<br>
 
-羽田と有楽町を行ったり来たりしてます。手応えはバッチリ。期待しててね。<br>
+We've been going back and forth between Haneda and Yurakucho. The response is perfect. Keep your eyes peeled.<br>
 
-それでは、明日、会場で会いましょう！
+See you tomorrow at the venue!
 
 
 
@@ -73,7 +73,7 @@ SONIC TEAM INFORMATION
 </table>
 
 <br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
