--- a/japan/sonicadv/info/maintheme.html
+++ b/japan/sonicadv/info/maintheme.html
@@ -16,7 +16,7 @@
 
 <font face="ＤＦＰPOP体" size=5 color="white"><b>
 
-メインテーマ曲(発表会バージョン)
+Main theme song (Presentation version)
 
 </b></font>
 
@@ -26,7 +26,7 @@
 
 <font size=4 color="white"><b>
 
-ダウンロードして聴いちゃおう！
+Download and listen!
 
 </b></font>
 
@@ -56,11 +56,11 @@
 
 <font size=3>
 
-今度のテーマ曲は、今までになくロックテイストあふれた曲だよ！<br>
+The new theme song has a rockier feel than ever before!<br>
 
-ＷＥＢ用にワンコーラスにまとめたファイルを３種類用意したので、
+We've prepared three different files with one chorus for the web,
 
-発表会までに覚えて一緒にライブで盛り上がろう！感想も送ってね。
+so let's learn it before the presentation and have a great time at the concert together! Please send us your feedback, too.
 
 
 
@@ -80,7 +80,7 @@
 
 <font size=4 color="white"><b>
 
-特注ギターも完成したよ！
+We've finished a custom-made guitar!
 
 </b></font>
 
@@ -90,11 +90,11 @@
 
 <font size=3 color="black">
 
-発表会でライブやります。<br>
+We will be doing a live performance at the presentation<br>
 
-このライブのために特注したギターが完成したよ。<br>
+We finished the guitar we had custom-made for this gig.<br>
 
-実際に持ってみると、こうなります。
+This is what it looks like when you actually hold it.
 
 </font>
 
@@ -106,7 +106,7 @@
 
 <img src="img0817/hikeru.jpg" width="256" height="256" border=1>
 
-弾けるひと
+Populist
 
 </td>
 
@@ -114,7 +114,7 @@
 
 <img src="img0817/hikenai.jpg" width="256" height="256" border=1>
 
-弾けないひと
+Non-guitarist
 
 </td>
 
@@ -125,7 +125,7 @@
 </table>
 
 <br><br>
-  <font size="2"><a href="../index.html"><<戻る>></a></font> 
+  <font size="2"><a href="../index.html"><<Return>></a></font> 
 </center>
 
 </body>
